@@ -1,0 +1,5 @@
+
+the material in this directory has been moved to:
+  $YARP_ROOT/src/modules/portaudio
+
+--paulfitz
