@@ -1,7 +1,8 @@
 2008-03-19  Paul Fitzpatrick  <paulfitz@alum.mit.edu>
 
 	* src/modules/CMakeLists.txt:  move serial device from
-	src/libYARP_dev/src/serial
+	src/libYARP_dev/src/serial, portaudio device from
+	src/libYARP_dev/src/portaudio
 
 2008-03-18  Paul Fitzpatrick  <paulfitz@alum.mit.edu>
 
